# fab3dwire

./: .gitignore  README.md
wiregrad/: CMakeLists.txt  LICENSE  README.md  bspline.py  example_image.py  example_mesh.py  example_text.py  example_twowires.py  pyproject.toml  requirements.txt  setup.py  visual_loss.py
wiregrad/data/config/: bunny.json  horse_bull.json
wiregrad/data/config/image/: guitar_coffee.json
wiregrad/data/config/text/: skull_wineglass.json
wiregrad/debug/: CMakeLists.txt  debug.cpp
wiregrad/dependencies/cpu/: requirements.txt
wiregrad/src/: CMakeLists.txt  antialias.h  basis_spline.cpp  basis_spline.h  bbox.h  common.h  edge_sampling.cpp  edge_sampling.h  filled_polygons.h  image_tile.h  intersect.h  line_hierarchy2d.cpp  line_hierarchy2d.h  line_hierarchy3d.cpp  line_hierarchy3d.h  main.cpp  polylines.h  render.cpp  render.h  repulsion.cpp  repulsion.h  thread.h  timer.h  trimesh.cpp  trimesh.h  vector.h  wiregrad.cpp  wiregrad.h
wiregrad/src/cuda/: CMakeLists.txt  basis_spline.cu  common.cuh  edge_sampling.cu  line_hierarchy2d.cu  line_hierarchy3d.cu  render.cu  repulsion.cu
wiregrad/src/ext/bvh/: NOTICE.md
wiregrad/src/wiregrad/: __init__.py  cuda.py  curve.py  debug.py  edge_sampling.py  geometry.py  line_hierarchy.py  optimizer.py  render.py  topology.py  transform.py
wiregrad/tests/curve/: bending_demo.py  bspline.py  rotation.py  torsion_demo.py
wiregrad/tests/optimization/: fill_bunny.py  fill_multiple.py  fill_star.py  line_eye.py  line_open.py  line_star.py
wiregrad/tests/render/: antialias.py  backward_fill.py  backward_line.py  backward_width.py  hierarchy2d.py  hierarchy_fill.py  hierarchy_line.py  render_fill.py  render_line.py  render_orthographic.py  render_triangles.py  sample_corners_and_edges.py  sample_edges.py
wiregrad/tests/repulsion/: gradients.py  hierarchy3d.py  kernel_shape.py  plane_intersection.py  repulsion_demo.py
wiregrad/utils/: __init__.py  imsave.py  plotter.py  utils.py
wirejig/: Cargo.toml  README.md
wirejig/asset/dog_cat/: a_pillars.off  a_pillars_goal.off  a_ribbon.off  a_ribbon_goal.off  a_ribbon_start.off  a_ribbon_vtx2flag.json  a_tube.off
wirejig/examples/: 0_split_input_loop_into_two.rs  1_generate_ribbon.rs  2_generate_pillars.rs
wirejig/examples/trash/: 1_tube.rs  4_pillar.rs  5_intersection.rs  6_inflate_plates.rs
wirejig/src/: lib.rs
