[package]
name = "wirejig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.5"
num-traits = "0.2.18"
rand = "0.8.5"
serde = "1.0.199"
serde_json = "1.0.116"
serde_derive = "1.0.199"
del-msh = {path="../../del-msh"}
del-geo = {path="../../del-geo"}
# del-msh = "0.1.24"
# del-geo = "0.1.16"